<resources>
    <string name="app_name">Spotify API</string>
    <string name="device_address">Device Address:</string>
    <string name="device_name">Device Name:</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported!</string>
    <string name="device_title">Choose your bluetooth device</string>
    <string name="device_explanation">Your bluetooth device is the monitor which measures your heart rate.</string>
    <string name="measure_button">Go!</string>
    <string name="initial_measuring_title">Let us measure your heart rate</string>
    <string name="initial_measure_explanation">Please sit down where it\'s quiet. We will measure you heart rate for about 30 seconds.</string>
    <string name="active_measuring_title">Now for something more sporty</string>
    <string name="active_measure_explanation">Run up some stairs to get your heart rate up. While running, press \"Go!\"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_bluetooth">Change Bluetooth monitor</string>
    <string name="redo_intro">Redo intro</string>
    <string name="confirm_button">Confirm</string>
    <string name="unknown_playlist">Unknown Playlist</string>
    <string name="email_slide_title">Enter your google account\'s eMail address</string>
    <string name="email_slide_explanation">With your eMail, we can access your calendar which helps us deliver more fitting music to you!</string>
    <string name="calendar_account">calendar account</string>
    <string name="calendar_name">calendar name</string>
    <string name="auto_determine_music">Shuffle something!</string>
    <string name="calendar_id">calendar id</string>
</resources>
